release update, fix preview on small screens (thanks to reordering of CSS)

--- a/css/preview.css
+++ b/css/preview.css
@@ -59,3 +59,24 @@
 .period-chip.transparent::before {
   display: none;
 }
+
+@media (max-width: 700px) {
+
+  .preview {
+    position: absolute;
+    top: 45%;
+    transform: translateY(-50%);
+    left: 0;
+    width: 100%;
+    margin: 0;
+    text-align: center;
+    bottom: auto;
+  }
+
+  #progress {
+    left: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+}
